--- a/index.html
+++ b/index.html
@@ -1,19 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<div id="chat_Supertamil"></div><p></a></p>
-<script type="text/javascript">
-    var chatovodOnLoad = chatovodOnLoad || [];
-    chatovodOnLoad.push(function() {
-        chatovod.addChatToDivId("chat_Supertamil", {host: "Supertamil.chatovod.com",
-            width: "100%", height: 380, defaultLanguage: "en"});
-    });
-    (function() {
-        var po = document.createElement('script');
-        po.type = 'text/javascript'; po.charset = "UTF-8"; po.async = true;
-        po.src = 'https://st1.chatovod.com/api/js/v1.js?3';
-        var s = document.getElementsByTagName('script')[0];
-        s.parentNode.insertBefore(po, s);
-    })();
-</script>
-</body>
-</html>
+<div style="height: 500px;"><div id="rt-9b1f3f6fdd2a9a8efc03d866c725e061"></div> <script src="https://rumbletalk.com/client/?h721VrtX"></script></div>
