--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head><title></title></head>
 <body>
 
-<div id="rt-9b1f3f6fdd2a9a8efc03d866c725e061"></div> <script src="https://rumbletalk.com/client/?h721VrtX"></script>
+<div style="height: 700px;"><div id="rt-9b1f3f6fdd2a9a8efc03d866c725e061"></div> <script src="https://rumbletalk.com/client/?h721VrtX"></script></div>
 
 </body>
 </html>
