--- a/test/index.html
+++ b/test/index.html
@@ -1,234 +1,217 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Private Chat + Voice Call</title>
+<title>Tamil VM Chat</title>
+
+<!-- Firebase -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-storage-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-messaging-compat.js"></script>
 
 <style>
-body{margin:0;background:#111b21;color:#fff;font-family:Arial}
-#loginWrap{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;background:#0008}
-#loginCard{background:#0b141a;padding:20px;border-radius:12px;width:300px;text-align:center}
-#loginCard input{width:100%;padding:8px;margin:6px 0}
-#loginCard img{width:80px;height:80px;border-radius:50%;object-fit:cover;margin-bottom:6px}
-#app{display:none;height:100vh;flex-direction:column}
-#topBar{background:#0b141a;padding:10px;display:flex;align-items:center}
-#users{flex:1;overflow:auto;background:#071215;padding:10px}
-.user{display:flex;align-items:center;padding:8px;border-bottom:1px solid #222;cursor:pointer}
-.user img{width:40px;height:40px;border-radius:50%;margin-right:10px}
-#chat{flex:1;display:none;flex-direction:column}
-#messages{flex:1;overflow:auto;padding:10px}
-.msg{margin:6px 0}
-.self{text-align:right}
-#inputBar{display:flex;padding:8px;background:#202c33}
-#inputBar input{flex:1;padding:8px;border-radius:20px;border:0}
-button{background:#25d366;border:0;border-radius:20px;padding:8px 12px;color:#000;margin-left:6px}
-#settings{position:absolute;right:10px;top:50px;background:#0b141a;padding:10px;border-radius:8px;display:none}
-#editProfile{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:#0008}
-#editProfile .card{background:#0b141a;padding:20px;border-radius:12px}
-#callUI{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:#000c}
+body{margin:0;background:#0f0f0f;color:#fff;font-family:sans-serif}
+.hidden{display:none}
+.card{background:#1b1b1b;padding:15px;border-radius:12px}
+.center{display:flex;justify-content:center;align-items:center;height:100vh}
+input,select,button{width:100%;padding:10px;margin-top:8px;border-radius:8px;border:none}
+button{background:#00e676;font-weight:bold}
+.top{display:flex;justify-content:space-between;padding:10px;background:#000}
+.user{display:flex;align-items:center;padding:10px;border-bottom:1px solid #333}
+.user img{width:50px;height:50px;border-radius:50%;margin-right:10px}
+.dot{width:10px;height:10px;border-radius:50%;margin-left:auto}
+.on{background:#00e676}
+.off{background:#444}
+.popup{position:fixed;top:0;left:0;width:100%;height:100%;background:#000c;display:flex;justify-content:center;align-items:center}
+.chat{height:50vh;overflow:auto;border:1px solid #333;padding:8px}
+.msg{margin:4px}
+.me{text-align:right;color:#00e676}
+.badge{background:red;border-radius:50%;padding:2px 6px}
+.timer{color:#0f0;text-align:center}
 </style>
 </head>
 
 <body>
 
-<div id="loginWrap">
-  <div id="loginCard">
-    <img id="loginImg" src="">
-    <input type="file" accept="image/*" onchange="loadLoginImg(event)">
-    <input id="nameInput" placeholder="Your name">
-    <button onclick="login()">Enter</button>
+<!-- LOGIN -->
+<div id="login" class="center">
+  <div class="card" style="width:300px">
+    <h3>Login</h3>
+    <input id="name" placeholder="Name">
+    <input id="age" type="number" placeholder="Age">
+    <select id="gender"><option>Male</option><option>Female</option></select>
+    <input type="file" id="img">
+    <button onclick="login()">Continue</button>
   </div>
 </div>
 
-<div id="app">
-  <div id="topBar">
-    <b id="myName"></b>
-    <div style="flex:1"></div>
-    <button onclick="settings.style.display=settings.style.display?'':'block'">⚙️</button>
-    <div id="settings">
-      <button onclick="openEdit()">Edit Profile</button><br><br>
-      <button onclick="logout()">Logout</button>
+<!-- MAIN -->
+<div id="main" class="hidden">
+  <div class="top">
+    <b>Tamil VM Chat</b>
+    <div>
+      🔔 <span id="unread" class="badge hidden">0</span>
+      ⚙️ <button onclick="openSettings()">⚙️</button>
     </div>
   </div>
-
   <div id="users"></div>
-
-  <div id="chat">
-    <div id="messages"></div>
-    <div id="inputBar">
-      <input id="msgInput">
-      <button onclick="sendMsg()">Send</button>
-      <button onclick="startCall()">📞</button>
-    </div>
-  </div>
 </div>
 
-<div id="editProfile">
-  <div class="card">
-    <h3>Edit Profile</h3>
-    <img id="editImg" width="80"><br>
-    <input type="file" accept="image/*" onchange="loadEditImg(event)">
-    <input id="editName">
-    <button onclick="saveProfile()">Save</button>
-    <button onclick="editProfile.style.display='none'">Close</button>
-  </div>
+<!-- CHAT -->
+<div id="chatPop" class="popup hidden">
+<div class="card" style="width:90%;max-width:400px">
+<h3 id="chatName"></h3>
+<div class="chat" id="chatBox"></div>
+<input id="msg" placeholder="Message">
+<button onclick="sendMsg()">Send</button>
+<button onclick="callUser()">📞 Audio Call</button>
+<button onclick="blockUser()">🚫 Block</button>
+<button onclick="closeChat()">Close</button>
+</div>
 </div>
 
-<div id="callUI">
-  <div class="card">
-    <h2>Voice Call</h2>
-    <button onclick="endCall()">End Call</button>
-  </div>
+<!-- INCOMING CALL -->
+<div id="callPop" class="popup hidden">
+<div class="card">
+<h3 id="callText">Incoming Call</h3>
+<div class="timer" id="callTimer"></div>
+<button onclick="acceptCall()">Accept</button>
+<button onclick="rejectCall()">Reject</button>
+</div>
 </div>
 
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+<!-- SETTINGS -->
+<div id="settings" class="popup hidden">
+<div class="card" style="width:300px">
+<h3>Settings</h3>
+<button onclick="editProfile()">Edit Profile</button>
+<button onclick="logout()">Logout</button>
+<button onclick="closeSettings()">Close</button>
+</div>
+</div>
 
 <script>
+/* FIREBASE */
 firebase.initializeApp({
  apiKey:"AIzaSyB1VbLbqBxCiG_bfGoQgQyapXwHUQ-Q7BU",
  authDomain:"tamil-chat-2d54e.firebaseapp.com",
- databaseURL:"https://tamil-chat-2d54e-default-rtdb.firebaseio.com"
+ databaseURL:"https://tamil-chat-2d54e-default-rtdb.firebaseio.com",
+ projectId:"tamil-chat-2d54e",
+ storageBucket:"tamil-chat-2d54e.appspot.com",
+ messagingSenderId:"804705969240",
+ appId:"1:804705969240:web:658df281dd8360843c162d"
 });
+
 const db=firebase.database();
+const storage=firebase.storage();
 
-let me="",myImg="",peer="",pc,localStream;
+let me=JSON.parse(localStorage.getItem("me"));
+let peer,stream,currentChat,callTimerInt;
 
-function loadLoginImg(e){
- let r=new FileReader();
- r.onload=()=>loginImg.src=myImg=r.result;
- r.readAsDataURL(e.target.files[0]);
-}
+/* AUTO LOGIN */
+if(me){login.classList.add("hidden");main.classList.remove("hidden");online(true);loadUsers();}
 
+/* LOGIN */
 function login(){
- me=nameInput.value.trim();
- if(!me||!myImg)return;
- db.ref("profiles/"+me).set({name:me,img:myImg});
- loginWrap.style.display="none";
- app.style.display="flex";
- myName.textContent=me;
- loadUsers();
+ const id=Date.now();
+ const file=img.files[0];
+ storage.ref("profiles/"+id).put(file).then(r=>r.ref.getDownloadURL().then(url=>{
+   me={id,name:name.value,age:age.value,gender:gender.value,img:url,online:true};
+   db.ref("users/"+id).set(me);
+   localStorage.setItem("me",JSON.stringify(me));
+   location.reload();
+ }));
 }
 
+/* ONLINE */
+function online(v){db.ref("users/"+me.id+"/online").set(v);}
+window.onbeforeunload=()=>online(false);
+
+/* USERS */
 function loadUsers(){
- db.ref("profiles").on("value",s=>{
+ db.ref("users").on("value",s=>{
   users.innerHTML="";
   s.forEach(u=>{
-   if(u.key===me)return;
-   let d=document.createElement("div");
-   d.className="user";
-   d.innerHTML=`<img src="${u.val().img}"><div>${u.key}</div>`;
-   d.onclick=()=>openChat(u.key);
-   users.appendChild(d);
-  })
- })
+   if(u.key==me.id)return;
+   let d=u.val();
+   users.innerHTML+=`
+   <div class="user" onclick="openChat(${u.key},'${d.name}')">
+    <img src="${d.img}">
+    ${d.name}, ${d.age}
+    <div class="dot ${d.online?'on':'off'}"></div>
+   </div>`;
+  });
+ });
 }
 
-function openChat(u){
- peer=u;
- chat.style.display="flex";
- messages.innerHTML="";
- db.ref("pm/"+me+"/"+peer).on("child_added",s=>{
+/* CHAT */
+function openChat(id,name){
+ currentChat=id;
+ chatName.innerText=name;
+ chatBox.innerHTML="";
+ chatPop.classList.remove("hidden");
+ db.ref("chat/"+me.id+"_"+id).on("child_added",s=>{
   let m=s.val();
-  let d=document.createElement("div");
-  d.className="msg"+(m.from===me?" self":"");
-  d.textContent=m.text;
-  messages.appendChild(d);
- })
+  chatBox.innerHTML+=`<div class="msg ${m.from==me.id?'me':''}">${m.text}</div>`;
+ });
 }
-
 function sendMsg(){
- let t=msgInput.value.trim();if(!t)return;
- let m={from:me,text:t};
- db.ref("pm/"+me+"/"+peer).push(m);
- db.ref("pm/"+peer+"/"+me).push(m);
- msgInput.value="";
+ let t=msg.value; msg.value="";
+ let m={from:me.id,text:t,time:Date.now()};
+ db.ref("chat/"+me.id+"_"+currentChat).push(m);
+ db.ref("chat/"+currentChat+"_"+me.id).push(m);
 }
 
-/* -------- REAL VOICE CALL -------- */
-
-async function startCall(){
- callUI.style.display="flex";
- pc=new RTCPeerConnection();
- localStream=await navigator.mediaDevices.getUserMedia({audio:true});
- localStream.getTracks().forEach(t=>pc.addTrack(t,localStream));
-
- pc.ontrack=e=>{
-  let a=document.createElement("audio");
-  a.srcObject=e.streams[0];a.autoplay=true;
- }
-
- pc.onicecandidate=e=>{
-  if(e.candidate)db.ref("calls/"+peer+"/ice").push(e.candidate);
- }
-
- let offer=await pc.createOffer();
- await pc.setLocalDescription(offer);
- db.ref("calls/"+peer+"/offer").set({from:me,offer});
+/* AUDIO CALL */
+function callUser(){
+ db.ref("calls/"+currentChat).set({from:me.id,status:"ring"});
 }
-
-db.ref("calls/"+me+"/offer").on("value",async s=>{
+db.ref("calls/"+me?.id).on("value",s=>{
  if(!s.exists())return;
- callUI.style.display="flex";
- pc=new RTCPeerConnection();
- localStream=await navigator.mediaDevices.getUserMedia({audio:true});
- localStream.getTracks().forEach(t=>pc.addTrack(t,localStream));
-
- pc.ontrack=e=>{
-  let a=document.createElement("audio");
-  a.srcObject=e.streams[0];a.autoplay=true;
- }
-
- pc.onicecandidate=e=>{
-  if(e.candidate)db.ref("calls/"+s.val().from+"/ice").push(e.candidate);
- }
-
- await pc.setRemoteDescription(s.val().offer);
- let ans=await pc.createAnswer();
- await pc.setLocalDescription(ans);
- db.ref("calls/"+s.val().from+"/answer").set(ans);
+ callPop.classList.remove("hidden");
 });
 
-db.ref("calls/"+me+"/answer").on("value",s=>{
- if(s.exists())pc.setRemoteDescription(s.val());
-});
-
-db.ref("calls/"+me+"/ice").on("child_added",s=>{
- pc.addIceCandidate(s.val());
-});
-
-function endCall(){
- callUI.style.display="none";
- pc.close();
- db.ref("calls/"+me).remove();
+function acceptCall(){
+ callPop.classList.add("hidden");
+ startCall();
+}
+function rejectCall(){
+ callPop.classList.add("hidden");
+ db.ref("calls/"+me.id).remove();
+}
+function startCall(){
+ navigator.mediaDevices.getUserMedia({audio:true}).then(s=>{
+  stream=s;
+  startTimer();
+ });
+}
+function startTimer(){
+ let sec=0;
+ callTimerInt=setInterval(()=>{
+  sec++;
+  callTimer.innerText="Call Time: "+sec+"s";
+ },1000);
 }
 
-/* -------- PROFILE EDIT -------- */
-
-function openEdit(){
- editProfile.style.display="flex";
- editImg.src=myImg;
- editName.value=me;
+/* BLOCK */
+function blockUser(){
+ db.ref("blocked/"+me.id+"/"+currentChat).set(true);
+ alert("Blocked");
 }
 
-function loadEditImg(e){
- let r=new FileReader();
- r.onload=()=>editImg.src=r.result;
- r.readAsDataURL(e.target.files[0]);
-}
-
-function saveProfile(){
- me=editName.value.trim();
- myImg=editImg.src;
- db.ref("profiles/"+me).set({name:me,img:myImg});
- editProfile.style.display="none";
-}
-
-/* -------- LOGOUT -------- */
+/* SETTINGS */
+function openSettings(){settings.classList.remove("hidden");}
+function closeSettings(){settings.classList.add("hidden");}
+function editProfile(){alert("Profile edit UI can be expanded")}
 function logout(){
+ online(false);
+ localStorage.clear();
  location.reload();
 }
+function closeChat(){chatPop.classList.add("hidden");}
 </script>
+
 </body>
 </html>
