--- a/test/index.html
+++ b/test/index.html
@@ -70,13 +70,13 @@ button{background:#00c853;color:#000;font-weight:bold}
 <script>
 /* FIREBASE */
 firebase.initializeApp({
-  apiKey: "AIzaSyB1VbLbqBxCiG_bfGoQgQyapXwHUQ-Q7BU",
-  authDomain: "tamil-chat-2d54e.firebaseapp.com",
-  databaseURL: "https://tamil-chat-2d54e-default-rtdb.firebaseio.com",
-  projectId: "tamil-chat-2d54e",
-  storageBucket: "tamil-chat-2d54e.appspot.com",
-  messagingSenderId: "804705969240",
-  appId: "1:804705969240:web:658df281dd8360843c162d"
+  apiKey: "AIzaSyAlWP5D79PsX29H0hIZlfvL0YV5Us7v5I4",
+  authDomain: "sample-firebase-ai-app-1f408.firebaseapp.com",
+  databaseURL: "https://sample-firebase-ai-app-1f408-default-rtdb.asia-southeast1.firebasedatabase.app",
+  projectId: "sample-firebase-ai-app-1f408",
+  storageBucket: "sample-firebase-ai-app-1f408.firebasestorage.app",
+  messagingSenderId: "657942233322",
+  appId: "1:657942233322:web:a8dd9896ca8cfccdbb5793"
 });
 
 const db = firebase.database();
