--- a/test/index.html
+++ b/test/index.html
@@ -3,152 +3,187 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dating App Demo</title>
+  <title>Dating App – Firebase Demo</title>
+
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-storage-compat.js"></script>
+
   <style>
-    * { box-sizing: border-box; font-family: Arial, Helvetica, sans-serif; }
-    body { margin: 0; background: #f4f6fb; }
-    header { background: #ff4d6d; color: #fff; padding: 15px; text-align: center; }
+    * { box-sizing: border-box; font-family: Arial, sans-serif; }
+    body { margin: 0; background: #f5f6fa; }
+
+    header {
+      background: #ff4d6d; color: #fff; padding: 12px 15px;
+      display: flex; justify-content: space-between; align-items: center;
+    }
+    header h2 { margin: 0; }
+    .icons span { margin-left: 15px; font-size: 20px; cursor: pointer; }
 
     .container { max-width: 420px; margin: auto; padding: 15px; }
 
     /* Login */
-    .login-card {
-      background: #fff; padding: 20px; border-radius: 15px;
-      box-shadow: 0 10px 25px rgba(0,0,0,.1);
-    }
-    .login-card h2 { text-align: center; margin-bottom: 15px; }
-    .login-card input, .login-card select {
-      width: 100%; padding: 10px; margin-bottom: 10px;
-      border-radius: 8px; border: 1px solid #ccc;
-    }
-    .btn {
-      width: 100%; padding: 12px; border: none;
-      border-radius: 10px; background: #ff4d6d;
-      color: #fff; font-size: 16px; cursor: pointer;
-    }
+    .card { background: #fff; border-radius: 16px; padding: 15px; box-shadow: 0 10px 20px rgba(0,0,0,.1); }
+    input, select, textarea { width: 100%; padding: 10px; margin-bottom: 10px; border-radius: 8px; border: 1px solid #ccc; }
+    button { padding: 10px; border: none; border-radius: 10px; cursor: pointer; }
+    .btn { background: #ff4d6d; color: #fff; width: 100%; }
 
-    /* Profiles */
-    .card {
-      background: #fff; border-radius: 20px;
-      box-shadow: 0 10px 25px rgba(0,0,0,.15);
-      overflow: hidden; margin-top: 20px;
-    }
-    .card img { width: 100%; height: 320px; object-fit: cover; }
-    .card-body { padding: 15px; }
-    .name { font-size: 20px; font-weight: bold; }
-    .info { color: #555; margin: 5px 0; }
+    /* Profile card */
+    .profile-card { margin-top: 15px; overflow: hidden; }
+    .profile-card img { width: 100%; height: 320px; object-fit: cover; }
+    .info { padding: 10px; }
+    .online { color: green; font-weight: bold; }
+    .offline { color: gray; }
 
-    .actions {
-      display: flex; justify-content: space-between; margin-top: 15px;
-    }
-    .actions button {
-      width: 48%; padding: 12px; border-radius: 30px; border: none;
-      font-size: 16px; cursor: pointer;
-    }
-    .like { background: #4caf50; color: #fff; }
-    .pass { background: #ccc; }
+    .actions { display: flex; gap: 10px; }
+    .like { background: #4caf50; color: #fff; flex: 1; }
+    .chat { background: #2196f3; color: #fff; flex: 1; }
 
-    /* Proposal Modal */
-    .modal {
-      display: none; position: fixed; inset: 0;
-      background: rgba(0,0,0,.5);
-      justify-content: center; align-items: center;
+    /* Chat popup */
+    .chat-popup {
+      position: fixed; bottom: 0; left: 0; right: 0;
+      background: #fff; border-radius: 20px 20px 0 0;
+      max-width: 420px; margin: auto; display: none;
+      box-shadow: 0 -5px 20px rgba(0,0,0,.2);
     }
-    .modal-content {
-      background: #fff; padding: 20px; border-radius: 15px;
-      width: 90%; max-width: 350px; text-align: center;
-    }
-    textarea { width: 100%; height: 80px; border-radius: 8px; padding: 8px; }
+    .chat-header { background: #ff4d6d; color: #fff; padding: 10px; display: flex; justify-content: space-between; }
+    .messages { height: 200px; overflow-y: auto; padding: 10px; }
+    .msg { margin-bottom: 8px; }
+    .me { text-align: right; color: #ff4d6d; }
 
-    footer { text-align: center; padding: 10px; color: #777; }
+    /* Settings */
+    .settings { display: none; }
+    .toggle { display: flex; justify-content: space-between; margin-bottom: 10px; }
+
   </style>
 </head>
 <body>
 
 <header>
-  <h1>❤️ Dating App</h1>
+  <h2>❤️ Dating App</h2>
+  <div class="icons">
+    <span onclick="openSettings()">⚙️</span>
+    <span>🔔</span>
+  </div>
 </header>
 
-<div class="container" id="loginBox">
-  <div class="login-card">
-    <h2>Create Profile</h2>
-    <input id="name" placeholder="Your Name" />
-    <input id="age" type="number" placeholder="Age" />
-    <select id="gender">
-      <option value="">Gender</option>
-      <option>Male</option>
-      <option>Female</option>
-    </select>
-    <select id="looking">
-      <option value="">Looking For</option>
-      <option>Friendship</option>
-      <option>Dating</option>
-      <option>Serious Relationship</option>
-      <option>Marriage</option>
-    </select>
-    <button class="btn" onclick="login()">Continue</button>
-  </div>
-</div>
+<div class="container">
 
-<div class="container" id="app" style="display:none;">
-  <div class="card">
-    <img id="profileImg" src="https://picsum.photos/400/600?random=1" />
-    <div class="card-body">
-      <div class="name" id="pname">Anu, 23</div>
-      <div class="info">Looking for: Serious Relationship</div>
-      <div class="info">📍 Chennai</div>
-      <div class="actions">
-        <button class="pass" onclick="nextProfile()">❌ Pass</button>
-        <button class="like" onclick="openProposal()">❤️ Like</button>
+  <!-- LOGIN -->
+  <div id="loginBox" class="card">
+    <h3>Create Profile</h3>
+    <input id="name" placeholder="Name" />
+    <input id="age" type="number" placeholder="Age" />
+    <select id="gender"><option>Male</option><option>Female</option></select>
+    <input type="file" id="profileImgInput" />
+    <button class="btn" onclick="login()">Login</button>
+  </div>
+
+  <!-- MAIN APP -->
+  <div id="app" style="display:none;">
+    <div class="card profile-card">
+      <img id="profileImg" src="https://picsum.photos/400/600" />
+      <div class="info">
+        <h3 id="pname">Anu, 23</h3>
+        <div id="status" class="online">● Online</div>
+        <div class="actions">
+          <button class="like">❤️ Like</button>
+          <button class="chat" onclick="openChat()">💬 Chat</button>
+        </div>
       </div>
     </div>
   </div>
+
+  <!-- SETTINGS -->
+  <div id="settings" class="card settings">
+    <h3>Settings</h3>
+    <div class="toggle">
+      <span>Private Chat</span>
+      <input type="checkbox" id="privateChat" checked />
+    </div>
+    <input type="file" onchange="changeProfileImage(this)" />
+    <button class="btn" onclick="logout()">Logout</button>
+  </div>
+
 </div>
 
-<!-- Proposal Modal -->
-<div class="modal" id="proposalModal">
-  <div class="modal-content">
-    <h3>Send Proposal 💌</h3>
-    <textarea placeholder="Write your proposal message..."></textarea>
-    <br><br>
-    <button class="btn" onclick="sendProposal()">Send</button>
+<!-- CHAT POPUP -->
+<div class="chat-popup" id="chatPopup">
+  <div class="chat-header">
+    <span>Chat</span>
+    <span onclick="closeChat()">✖</span>
+  </div>
+  <div class="messages" id="messages"></div>
+  <div style="display:flex; gap:5px; padding:10px;">
+    <input id="msgInput" placeholder="Type message" />
+    <button onclick="sendMsg()">Send</button>
   </div>
 </div>
 
-<footer>
-  Demo Dating App – HTML Only
-</footer>
-
 <script>
-  let index = 1;
-  const profiles = [
-    { name: 'Anu', age: 23, looking: 'Serious Relationship' },
-    { name: 'Kavya', age: 25, looking: 'Dating' },
-    { name: 'Priya', age: 22, looking: 'Friendship' }
-  ];
+  /* Firebase Config */
+  const firebaseConfig = {
+    apiKey: "AIzaSyAlWP5D79PsX29H0hIZlfvL0YV5Us7v5I4",
+    authDomain: "sample-firebase-ai-app-1f408.firebaseapp.com",
+    databaseURL: "https://sample-firebase-ai-app-1f408-default-rtdb.asia-southeast1.firebasedatabase.app",
+    projectId: "sample-firebase-ai-app-1f408",
+    storageBucket: "sample-firebase-ai-app-1f408.firebasestorage.app",
+    messagingSenderId: "657942233322",
+    appId: "1:657942233322:web:a8dd9896ca8cfccdbb5793"
+  };
+  firebase.initializeApp(firebaseConfig);
+
+  const auth = firebase.auth();
+  const db = firebase.database();
+  const storage = firebase.storage();
+
+  /* Anonymous login – one device remember */
+  auth.onAuthStateChanged(user => {
+    if (user) {
+      document.getElementById('loginBox').style.display = 'none';
+      document.getElementById('app').style.display = 'block';
+      db.ref('status/' + user.uid).set('online');
+    }
+  });
 
   function login() {
-    document.getElementById('loginBox').style.display = 'none';
-    document.getElementById('app').style.display = 'block';
+    auth.signInAnonymously();
   }
 
-  function nextProfile() {
-    index = (index + 1) % profiles.length;
-    const p = profiles[index];
-    document.getElementById('pname').innerText = p.name + ', ' + p.age;
-    document.querySelector('.info').innerText = 'Looking for: ' + p.looking;
-    document.getElementById('profileImg').src = 'https://picsum.photos/400/600?random=' + Math.random();
+  function logout() {
+    auth.signOut(); location.reload();
   }
 
-  function openProposal() {
-    document.getElementById('proposalModal').style.display = 'flex';
+  function openChat() {
+    document.getElementById('chatPopup').style.display = 'block';
+  }
+  function closeChat() {
+    document.getElementById('chatPopup').style.display = 'none';
   }
 
-  function sendProposal() {
-    alert('Proposal sent ❤️');
-    document.getElementById('proposalModal').style.display = 'none';
-    nextProfile();
+  function sendMsg() {
+    const msg = msgInput.value;
+    if (!msg) return;
+    messages.innerHTML += `<div class="msg me">${msg}</div>`;
+    msgInput.value = '';
   }
+
+  function openSettings() {
+    settings.style.display = settings.style.display === 'block' ? 'none' : 'block';
+  }
+
+  function changeProfileImage(input) {
+    const file = input.files[0];
+    const uid = auth.currentUser.uid;
+    const ref = storage.ref('profiles/' + uid);
+    ref.put(file).then(() => ref.getDownloadURL()).then(url => profileImg.src = url);
+  }
+
+  window.addEventListener('beforeunload', () => {
+    if (auth.currentUser) db.ref('status/' + auth.currentUser.uid).set('offline');
+  });
 </script>
 
 </body>
